Fix: shifting space by hovering heart save icon

--- a/static/css/_custom.scss
+++ b/static/css/_custom.scss
@@ -95,8 +95,8 @@
 // save button
 .btn-save {
   &::before {
-    font-family: "Font Awesome 5 Free";
     // heart icon
+    font-family: "Font Awesome 5 Free";
     content: "\f004";
   }
   display: inline-block;
@@ -113,10 +113,8 @@
   &:hover {
     &::before {
       // filled heart icon
-      content: "\f004";
-      font: var(--fa-font-solid);
-      color: #874c87;
-    }
+      font-weight: 900;
+    };
     color: #874c87;
   }
 }
